--- a/cv_sunny.Rmd
+++ b/cv_sunny.Rmd
@@ -62,9 +62,9 @@ knitr::include_graphics('./all_projects.png')
 
 ```{r}
 if(params$pdf_mode){
-  cat("View this CV online with links at sunnyshao.com/cv/_")
+  cat(" ")
 } else {
-  cat("[<i class='fas fa-download'></i> Download a PDF of this CV](https://www.sunnyshao.com/cv)")
+  cat("[<i class='fas fa-download'></i> Download a PDF of this CV](https://sunnyyshao.github.io/cv/sunnyshao_cv.pdf)")
 }
 ```
 
@@ -91,7 +91,7 @@ Disclaimer {#disclaimer}
 
 Made with the R package [**pagedown**](https://github.com/rstudio/pagedown). 
 
-The source code is available [on github.com/nstrayer/cv](https://github.com/sunnyyshao/cv).
+The source code is available [on github.com/SunnyYShao/cv](https://github.com/SunnyYShao/cv).
 
 Last updated on `r Sys.Date()`.
 
