--- a/resume/resume.Rmd
+++ b/resume/resume.Rmd
@@ -30,7 +30,7 @@ source('common_variables.R')  # Small variables for non-csv data such as intro t
 
 # First let's get the data, filtering to only the items tagged as
 # Resume items
-position_data <- read_csv('positions_sunny_ds_director.csv') %>% 
+position_data <- read_csv('positions_sunny_ds.csv') %>% 
   filter(in_resume) %>% 
   mutate(
     # Build some custom sections by collapsing others
@@ -64,7 +64,7 @@ Contact {#contact}
 
 
 
-Language Skills {#skills}
+Key Skills {#skills}
 --------------------------------------------------------------------------------
 
 
@@ -131,15 +131,6 @@ Selected Reports {data-icon=book}
 
 ```{r}
 position_data %>% print_section('report')
-```
-
-
-Selected Grants {data-icon=award}
---------------------------------------------------------------------------------
-
-
-```{r}
-position_data %>% print_section('grant')
 ```
 
 Selected Press {data-icon=newspaper}
