update CV styling

--- a/cv_sunny.Rmd
+++ b/cv_sunny.Rmd
@@ -76,24 +76,17 @@ CV %>% print_contact_info()
 ```
 
 
-
-Language Skills {#skills}
+Research Skills {#skills}
 --------------------------------------------------------------------------------
 
 ```{r}
 CV %>% print_skill_bars()
 ```
 
-
-
 Disclaimer {#disclaimer}
 --------------------------------------------------------------------------------
 
 Made with the R package [**pagedown**](https://github.com/rstudio/pagedown). 
-
-The source code is available [on github.com/SunnyYShao/cv](https://github.com/SunnyYShao/cv).
-
-Last updated on `r Sys.Date()`.
 
 
 
@@ -115,18 +108,45 @@ Education {data-icon=graduation-cap data-concise=true}
 CV %<>% print_section('education')
 ```
 
-Work Experience {data-icon=suitcase}
+Research Experience {data-icon=suitcase}
 --------------------------------------------------------------------------------
 
 ```{r}
 CV %<>% print_section('data_consulting_positions')
 ```
 
+Survey Projects & Focus Group Study {data-icon=poll}
+--------------------------------------------------------------------------------
+
+```{r}
+CV %<>% print_section('survey_projects')
+```
+
+Data Tools Development {data-icon=database}
+--------------------------------------------------------------------------------
+
+```{r}
+CV %<>% print_section('data_tools')
+```
+
+Research Reports  {data-icon=book}
+--------------------------------------------------------------------------------
+
+```{r}
+CV %<>% print_section('publication_reports')
+```
+
 ::: aside
 ```{r}
-CV %<>% print_text_block("industy_experience_aside")
+#CV %<>% print_text_block("industy_experience_aside")
 ```
 :::
+
+Blogpost Writting {data-icon=pen}
+--------------------------------------------------------------------------------
+```{r}
+CV %<>% print_section('blog')
+```
 
 Teaching & Workshop Experience {data-icon=chalkboard-teacher}
 --------------------------------------------------------------------------------
@@ -137,41 +157,14 @@ CV %<>% print_section('teaching_positions')
 
 ```
 
-Selected Interactive Data Tool Development {data-icon=database}
---------------------------------------------------------------------------------
-
-```{r}
-CV %<>% print_section('data_tools')
-```
-
-Survey Projects {data-icon=poll}
---------------------------------------------------------------------------------
-
-```{r}
-CV %<>% print_section('survey_projects')
-```
-
-Selected Published Research Reports  {data-icon=book}
---------------------------------------------------------------------------------
-
-```{r}
-CV %<>% print_section('publication_reports')
-```
-
 Selected Presentations & Invited Talks {data-icon=users}
 --------------------------------------------------------------------------------
 ```{r}
-CV %<>% print_section('workshop')
+CV %<>% print_section('presentation')
 ```
 
 ```{r}
 CV %<>% print_section('invited_talk')
-```
-
-Selected blogs {data-icon=pen}
---------------------------------------------------------------------------------
-```{r}
-CV %<>% print_section('blog')
 ```
 
 Selected Press  {data-icon=newspaper}
